skel-home-delta/.xmonad/xmonad.errors

xmonad.hs:4:1: error:
    Could not find module ‘XMonad’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
  |
4 | import XMonad
  | ^^^^^^^^^^^^^

xmonad.hs:5:1: error:
    Could not find module ‘XMonad.Hooks.SetWMName’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
  |
5 | import XMonad.Hooks.SetWMName
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:6:1: error:
    Could not find module ‘XMonad.Hooks.DynamicLog’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
  |
6 | import XMonad.Hooks.DynamicLog
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:7:1: error:
    Could not find module ‘XMonad.Hooks.ManageDocks’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
  |
7 | import XMonad.Hooks.ManageDocks
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:8:1: error:
    Could not find module ‘XMonad.Hooks.EwmhDesktops’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
  |
8 | import XMonad.Hooks.EwmhDesktops
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:9:1: error:
    Could not find module ‘XMonad.Hooks.ManageHelpers’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
  |
9 | import XMonad.Hooks.ManageHelpers(doFullFloat, doCenterFloat, isFullscreen, isDialog)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:10:1: error:
    Could not find module ‘XMonad.Config.Desktop’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
10 | import XMonad.Config.Desktop
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:11:1: error:
    Could not find module ‘XMonad.Config.Azerty’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
11 | import XMonad.Config.Azerty
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:12:1: error:
    Could not find module ‘XMonad.Util.Run’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
12 | import XMonad.Util.Run(spawnPipe)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:13:1: error:
    Could not find module ‘XMonad.Actions.SpawnOn’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
13 | import XMonad.Actions.SpawnOn
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:14:1: error:
    Could not find module ‘XMonad.Util.EZConfig’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
14 | import XMonad.Util.EZConfig (additionalKeys, additionalMouseBindings)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:15:1: error:
    Could not find module ‘XMonad.Actions.CycleWS’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
15 | import XMonad.Actions.CycleWS
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:16:1: error:
    Could not find module ‘XMonad.Hooks.UrgencyHook’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
16 | import XMonad.Hooks.UrgencyHook
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:17:1: error:
    Could not find module ‘Codec.Binary.UTF8.String’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
17 | import qualified Codec.Binary.UTF8.String as UTF8
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:19:1: error:
    Could not find module ‘XMonad.Layout.Spacing’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
19 | import XMonad.Layout.Spacing
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:20:1: error:
    Could not find module ‘XMonad.Layout.Gaps’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
20 | import XMonad.Layout.Gaps
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:21:1: error:
    Could not find module ‘XMonad.Layout.ResizableTile’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
21 | import XMonad.Layout.ResizableTile
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:23:1: error:
    Could not find module ‘XMonad.Layout.Fullscreen’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
23 | import XMonad.Layout.Fullscreen (fullscreenFull)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:24:1: error:
    Could not find module ‘XMonad.Layout.Cross’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
24 | import XMonad.Layout.Cross(simpleCross)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:25:1: error:
    Could not find module ‘XMonad.Layout.Spiral’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
25 | import XMonad.Layout.Spiral(spiral)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:26:1: error:
    Could not find module ‘XMonad.Layout.ThreeColumns’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
26 | import XMonad.Layout.ThreeColumns
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:27:1: error:
    Could not find module ‘XMonad.Layout.MultiToggle’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
27 | import XMonad.Layout.MultiToggle
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:28:1: error:
    Could not find module ‘XMonad.Layout.MultiToggle.Instances’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
28 | import XMonad.Layout.MultiToggle.Instances
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:29:1: error:
    Could not find module ‘XMonad.Layout.IndependentScreens’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
29 | import XMonad.Layout.IndependentScreens
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:32:1: error:
    Could not find module ‘XMonad.Layout.CenteredMaster’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
32 | import XMonad.Layout.CenteredMaster(centerMaster)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:34:1: error:
    Could not find module ‘Graphics.X11.ExtraTypes.XF86’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
34 | import Graphics.X11.ExtraTypes.XF86
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:35:1: error:
    Could not find module ‘XMonad.StackSet’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
35 | import qualified XMonad.StackSet as W
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:39:1: error:
    Could not load module ‘DBus’
    It is a member of the package ‘dbus-1.2.21-4cfI7afcrMoAQm9zU6cLC4’
    which is unusable due to missing dependencies:
      cereal-0.5.8.1-8mCXAg3ZUhz3qnQL3xR8hS conduit-1.3.4.2-AKStIHaEJrWIIUuGNNY4Rl lens-5.0.1-ITAPQqsDGB65l4Vd4njlu8 network-3.1.2.2-AIHAQTgcOP2p9DGqwUMBL random-1.2.1-GTaXQEmVKZP2pnqal7ZY4e split-0.2.3.4-66WnL8lpKgJ9suCZaVklHQ th-lift-0.8.2-F0VVOrB5SZgFNS1AEtieR9 vector-0.12.3.1-KJ02XewdvWJHGa2GVFsQSX xml-conduit-1.9.1.1-8CNqzA6KN6DiBGqQ8pB0o xml-types-0.3.8-144bFK4Wa4uGyLKj6w2QbB
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
39 | import qualified DBus as D
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:40:1: error:
    Could not load module ‘DBus.Client’
    It is a member of the package ‘dbus-1.2.21-4cfI7afcrMoAQm9zU6cLC4’
    which is unusable due to missing dependencies:
      cereal-0.5.8.1-8mCXAg3ZUhz3qnQL3xR8hS conduit-1.3.4.2-AKStIHaEJrWIIUuGNNY4Rl lens-5.0.1-ITAPQqsDGB65l4Vd4njlu8 network-3.1.2.2-AIHAQTgcOP2p9DGqwUMBL random-1.2.1-GTaXQEmVKZP2pnqal7ZY4e split-0.2.3.4-66WnL8lpKgJ9suCZaVklHQ th-lift-0.8.2-F0VVOrB5SZgFNS1AEtieR9 vector-0.12.3.1-KJ02XewdvWJHGa2GVFsQSX xml-conduit-1.9.1.1-8CNqzA6KN6DiBGqQ8pB0o xml-types-0.3.8-144bFK4Wa4uGyLKj6w2QbB
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
40 | import qualified DBus.Client as D
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
